2011-01-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* setup.py:
	  Back to HEAD.

=== release 0.8.19 ===

2011-01-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* setup.py:
	* NEWS:
	  Releasing 0.8.19, "Two Seven"
	* README:
	  Note that we support 2.2 - 2.7
	* MANIFEST.in:
	  Adding pychecker.doap

2011-01-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker.doap:
	* setup.py:
	  Add a DOAP file.

2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/utils.py:
	  debug suppressions detected.
	* test_check.sh:
	  Do a unified diff.  Reverse order, so that + lines show us
	  what the new output is.

2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_expected/test76:
	  For some reason line numbers for warnings shifted from 6 to 7.
	  Neither seems correct.  Adjust expected output for now since
	  it's not more wrong than before.
	* TODO:
	  Add a note to investigate this later.

2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/warn.py:
	  Push config before processing a nested function.
	  This fixes the new test_nestedsuppression.py
	* test/expected/test_nestedsuppression__objattrs:
	* test/test_suppressions.py:
	  Add the new test to the test suite, with four expected warnings.

2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  add Code.codeOrder attribute, keeping track of the order in
	  which codeObjects is added to.
	  add addCodeObject method.
	* pychecker/warn.py:
	  Go through codeObjects in order.
	  Fixing the ordering moves the warning in the previous test from
	  containerFirst to containerSecond, which makes more sense, but
	  still shows suppression bleed.

2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/input/test_nestedsuppression.py:
	  Add a test that shows that suppressions in nested code
	  bleed over into their sibling code blocks and parent.